--- a/src/styles/chat-room.scss
+++ b/src/styles/chat-room.scss
@@ -19,7 +19,7 @@
     flex: 1 1 100%;
     max-height: 890%;
     height: auto;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   &__footer {
@@ -30,83 +30,86 @@
   }
 }
 
-.profile {
+.text-editor {
   display: flex;
-  padding: 10px;
-  flex: 1 1 auto;
-
-  &__image {
-    flex: 0 1 30px;
-    height: 30px;
-    width: 30px;
-    border-radius: 30px;
-    overflow: hidden;
+  width: 100%;
+  overflow: hidden;
+  border-top: 1px solid $secondaryChat;
+  &__left {
+    display: flex;
+    flex: 0 0 auto;
+    width: 85%;
   }
 
-  &__detail {
-    margin-left: 10px;
-  }
-}
+  &__right {
+    display: flex;
+    flex: 0 0 auto;
+    width: 15%;
+    justify-content: center;
+    align-items: center;
 
-.detail {
-  display: flex;
-  flex-direction: column;
-  height: 30px;
-  &__name {
-    line-height: 10px;
-    font-size: 0.9em;
-  }
-
-  &__status {
-    margin-top: 3px;
-    font-size: 0.8em;
-    & span {
-      display: inline-block;
-      background: green;
-      width: 10px;
-      height: 10px;
-      border-radius: 10px;
+    button {
+      width: 100%;
+      border: none;
+      background: $primary;
+      color: $primaryFont;
+      font-size: 1em;
+      height: 35px;
+      width: 35px;
+      border-radius: 50px;
     }
   }
+
+  textarea {
+    font-size: 1.2em;
+    width: 90%;
+    border-radius: 5px;
+    margin: 2.5%;
+    max-height: 70px;
+    padding: 2.5%;
+    border: 1px solid #ccc;
+    height: 20px;
+  }
 }
 
-.text-editor{
+@include tablet {
+}
+@include desktop {
+  .text-editor {
     display: flex;
     width: 100%;
     overflow: hidden;
-    background: #ccc;
-    &__left{
-        display: flex;
-        flex: 0 0 auto;
-        width: 80%;
+    border-top: 1px solid $secondaryChat;
+    &__left {
+      display: flex;
+      flex: 0 0 auto;
+      width: 95%;
     }
 
-    &__right{
-        display: flex;
-        flex: 0 0 auto;
-        width: 20%;
-        justify-content: center;
-        align-items: center;
+    &__right {
+      width: 5%;
 
-        button{
-            width: 100%;
-            border:none;
-            background: $primary;
-            color:$primaryFont;
-            font-size: 1em;
-            height: 40px;
-            width: 40px;
-            border-radius: 50px;
-        }
+      button {
+        width: 100%;
+        border: none;
+        background: $primary;
+        color: $primaryFont;
+        font-size: 1em;
+        height: 35px;
+        width: 35px;
+        border-radius: 50px;
+      }
     }
 
-    textarea{
-        font-size: 1.2em;
-        width: 90%;
-        border-radius: 5px;
-        margin: 2.5%;
-        max-height: 70px;
-        padding: 2.5%;
-        height: 20px;
+    textarea {
+      font-size: 1.2em;
+      width: 100%;
+      border-radius: 5px;
+      margin: .5%;
+      max-height: 70px;
+      padding: .5%;
+      border: 1px solid #ccc;
+      height: 20px;
     }
+  }
 }
