--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,9 +1,24 @@
 @import "media-queries";
 @import "colors";
 
-.content{
-    flex: 1 1 100%;
-    display: flex;
-    height: 80%;
-    position: relative;
+.content {
+  flex: 1 1 100%;
+  display: flex;
+  height: 88%;
+  position: relative;
+}
+
+@include tablet {
+  .content {
+    flex: 0 1 528px;
+    margin: 10px;
+  }
+}
+@include desktop {
+  .content {
+    flex: 0 1 84%;
+    margin: .5%;
+    height: 88%;
+
+  }
 }
