--- a/src/styles/user-list-item.scss
+++ b/src/styles/user-list-item.scss
@@ -1,4 +1,13 @@
 .user-li{
     margin: 0 0 15px 0;
     width: 100%;
+
+    & a {
+        text-decoration: none;
+        color: #000;
+
+        &:hover .profile{
+            background: #ccc;
+        }
+    }
 }
